--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_database: ^11.1.4
-  google_sign_in: ^6.2.1
+  google_sign_in: ^6.2.2
   flutter_naver_login: ^2.0.0
+  http: ^1.2.2
+  google_maps_flutter: ^2.9.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
